--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,11 @@
 	<artifactId>azurehotel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>azurehotel</name>
+	<appname>azurehotel</appname>
+	<resourceGroup>DefaultResourceGroup-CUS</resourceGroup>
 	<description>azure hotel</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
